Good-enough walking AI
TODO:
- Fix hat rendering (doesn't rotate/tilt)
- Spawn stable agent with structure