@@ -1,14 +1,17 @@
 package ca.bradj.horsehotel;
 
 import com.google.common.collect.ImmutableSet;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
 import net.minecraft.core.GlobalPos;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.ai.Brain;
 import net.minecraft.world.entity.ai.memory.MemoryModuleType;
-import net.minecraft.world.entity.ai.memory.NearestVisibleLivingEntities;
 import net.minecraft.world.entity.ai.sensing.Sensor;
+import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -21,7 +24,7 @@ public class JobSiteFromHorseSensor extends Sensor<LivingEntity> {
     }
 
     public Set<MemoryModuleType<?>> requires() {
-        return ImmutableSet.of(MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
+        return ImmutableSet.of(MemoryModuleType.NEAREST_LIVING_ENTITIES);
     }
 
     protected void doTick(
@@ -29,19 +32,26 @@ public class JobSiteFromHorseSensor extends Sensor<LivingEntity> {
             LivingEntity p_26741_
     ) {
         Brain<?> brain = p_26741_.getBrain();
-        Optional<NearestVisibleLivingEntities> les = brain.getMemory(MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
+        Optional<List<LivingEntity>> les = brain.getMemory(MemoryModuleType.NEAREST_LIVING_ENTITIES);
         if (les.isEmpty()) {
             return;
         }
 
-        NearestVisibleLivingEntities ents = les.get();
-        List<LivingEntity> nhe = ents.find(v -> v instanceof NotHorseEntity).toList();
-        List<LivingEntity> list1 = nhe.stream().filter((p_26747_) -> {
-            return isEntityTargetable(p_26741_, p_26747_);
-        }).collect(Collectors.toList());
-        brain.setMemory(
-                MemoryModuleType.JOB_SITE,
-                list1.isEmpty() ? null : GlobalPos.of(p_26740_.dimension(), list1.get(0).getOnPos().above())
-        );
+        List<LivingEntity> ents = les.get();
+        List<LivingEntity> nhe = ents.stream().filter(v -> v instanceof NotHorseEntity).toList();
+        brain.setMemory(MemoryModuleType.JOB_SITE, getAttendPosition(p_26740_, nhe));
+    }
+
+    private static @Nullable GlobalPos getAttendPosition(
+            ServerLevel p_26740_,
+            List<LivingEntity> list1
+    ) {
+        if (list1.isEmpty()) {
+            return null;
+        }
+        Direction ranDir = Direction.Plane.HORIZONTAL.getRandomDirection(p_26740_.random);
+        int index = p_26740_.random.nextInt(Math.min(list1.size(), 6));
+        BlockPos p = list1.get(index).getOnPos().above().relative(ranDir, 4);
+        return GlobalPos.of(p_26740_.dimension(), p);
     }
 }
